# rpi_ws281x_driver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
controls/: CMakeLists.txt
controls/include/: pixel_movement.h
controls/src/: pixel_movement.c  strand_pixel_movement.c
patterns/: CMakeLists.txt  matrix_patterns.c  strand_patterns.c
patterns/include/: patterns.h
patterns/src/: matrix_patterns.c
